--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": false,
   "dependencies": {
+    "aws-sdk": "^2.291.0",
     "express": "^4.16.3"
   },
   "scripts": {
